<resources>
    <string name="app_name">ScrollViewYou</string>
    <string name="add_new_employee">Add New Employee</string>
    <string name="title">Title :</string>
    <string name="first_name">First Name :</string>
    <string name="email_address">Email Address</string>
    <string name="work_email">Work Email :</string>
    <string name="enter_last_name">Enter Last name</string>
    <string name="last_name">Last Name :</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="select_option">Select option</string>

</resources>