<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        style="@style/CustomTextView"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/black"
        android:background="@drawable/ic_baseline_person_add_alt_1_24"/>
    <TextView
       style="@style/CustomTextView"
        android:text="@string/add_new_employee"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/shape"
        android:layout_marginEnd="20dp"
        android:layout_height="match_parent">
     <TextView
         android:id="@+id/title"
         style="@style/CustomTextView"
         android:layout_margin="30sp"
         android:textSize="20sp"
         android:text="@string/title"/>
        <Button
            android:id="@+id/BtnSelect"
           style="@style/CustomTextView"
            android:layout_toEndOf="@+id/title"
            android:text="@string/select_option"
            android:textAllCaps="false"
            android:layout_marginTop="20sp"
            android:layout_marginStart="50sp"
            android:paddingHorizontal="50sp"
            android:paddingVertical="15sp"/>
        <TextView
            android:id="@+id/firstName"
            style="@style/CustomTextView"
            android:layout_margin="30sp"
            android:layout_below="@+id/title"
            android:text="@string/first_name"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/EtFirstName"
            style="@style/CustomTextView"
            android:hint="@string/enter_first_name"
            android:layout_below="@+id/BtnSelect"
            android:layout_toEndOf="@+id/firstName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35sp"
            android:background="@drawable/shape"
            android:padding="13sp"/>
        <TextView
            android:id="@+id/LastName"
            style="@style/CustomTextView"
            android:layout_margin="30sp"
            android:layout_below="@+id/firstName"
            android:text="@string/last_name"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/EtLastName"
            style="@style/CustomTextView"
            android:hint="@string/enter_last_name"
            android:layout_below="@+id/EtFirstName"
            android:layout_toEndOf="@+id/firstName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35sp"
            android:background="@drawable/shape"
            android:padding="13sp"/>

        <TextView
            android:id="@+id/WorkEmail"
            style="@style/CustomTextView"
            android:layout_margin="30sp"
            android:layout_below="@+id/LastName"
            android:text="@string/work_email"
            android:textSize="22sp"/>
        <EditText
            android:id="@+id/EtEmail"
           style="@style/CustomTextView"
            android:hint="@string/email_address"
            android:layout_below="@+id/EtLastName"
            android:layout_toEndOf="@+id/firstName"
            android:layout_marginTop="38sp"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape"
            android:padding="13sp"/>
    </RelativeLayout>

</LinearLayout>